# mesh

./: .gitignore  CMakeLists.txt  README.md  certificate.txt  compile_commands.json  generate_nvs.sh  partitions.csv  sdkconfig.defaults  server.pem  test_mqtt_conn.py
libraries/backoffAlgorithm/backoffAlgorithm/docs/doxygen/code_examples/: backoff_algorithm_posix.c
libraries/button/: CMakeLists.txt  component.mk
libraries/button/button/: button.c  button_obj.cpp
libraries/button/button/include/: iot_button.h
libraries/common/posix_compat/: clock_esp.c
libraries/qrcode/: CMakeLists.txt  esp_qrcode_main.c  esp_qrcode_wrapper.c  qrcodegen.c  qrcodegen.h
libraries/qrcode/include/: qrcode.h
libraries/ws2812_led/: CMakeLists.txt  Kconfig  component.mk  led_strip.h  led_strip_rmt_ws2812.c  ws2812_led.c  ws2812_led.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  mesh_main.c  mqtt_app.c  mqtt_demo_mutual_auth.c  mqtt_queue.c  mqtt_queue.h  mqtt_utils.c  nvs.csv  nvs_helper.c  nvs_helper.h  performance.c  performance.h  secret.h  suscription_event_handlers.c  suscription_event_handlers.h
main/certs/: client.crt  client.key
main/components/: dht.c  dht.h
main/mesh_netif/: mesh_netif.c  mesh_netif.h
main/mqtt/: aws_initialize_utils.c  aws_initialize_utils.h  aws_mqtt.h  aws_publish_utils.c  aws_publish_utils.h  aws_subscribe_utils.c  aws_subscribe_utils.h  aws_utils.h  aws_variables.h  mqtt_mutual_auth.c  mqtt_queue.c  mqtt_queue.h  publish_packets.h
main/mqtt/client/: mqtt_mutual_auth.c
main/mqtt/utils/: mqtt_utils.c  mqtt_utils.h
main/network_manager/: app_driver.c  provisioning.c  provisioning.h  provisioning.html  wifi_driver.c
main/old/: aws_utils.h
main/performance/: performance.c  performance.h
main/persistence/: persistence.c  persistence.h
main/relays/: relays.c  relays.h
main/reset_button/: reset_button.c  reset_button.h
main/sensors/tasks/: sensor_tasks.h  task_sensor_dh11.c  task_sensor_dht11.c  task_sensor_performance.c  task_sensor_template.c
main/sensors/utils/: sensor_utils.c  sensor_utils.h
main/status_led/: status_led.c  status_led.h
main/suscription_handlers/: config_event_handlers.c  relay_event_handlers.c  suscription_event_handlers.c  suscription_event_handlers.h
main/tasks_config/: tasks_config.c  tasks_config.h
main/utils/: utils.c  utils.h  uuid.c  uuid.h
partition_table/: partitionTable.csv
