idf_component_register(SRCS "mesh_main.c"
                            "mesh_netif.c"
                            "mqtt/mqtt_mutual_auth.c"
                            "network_manager/provisioning.c"
                            "persistence/persistence.c"
                            "components/dht.c"
                            "mqtt_queue.c"
                            "suscription_event_handlers.c"
                            "mqtt_utils.c"
                     INCLUDE_DIRS "." 
                                 "include"
                                 "mqtt"
                                 "network_manager"
                                 "persistence"
                        )
